--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,150 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <!-- <h1>HTML Form</h1> -->
     <script type="text/javascript" src="./main.js"></script>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
+
+      <fieldset class="form__fildset" id="firstTopSet">
+        <legend>Personal information</legend>
+        <label class="form__field" id="firstTop">
+          Surname:
+          <input type="text"
+          name="surname"
+          autocomplete="off"
+          >
+        </label>
+
+        <label class="form__field">
+          Name:
+          <input type="text"
+          name="Name"
+          autocomplete="off"
+          >
+        </label>
+
+        <label class="form__field">
+          How old are You?
+          <input type="number"
+          name="age"
+          min="1"
+          max="100"
+          value="12"
+          >
+        </label>
+
+        <label class="form__field">
+          Full date of birth:
+          <input type="date"
+          name="birthdate"
+          required
+          >
+        </label>
+
+        <label class="form__field">
+          I accept the term of the agreement
+          <input type="checkbox"
+          name="terms"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__fildset">
+        <legend>Registration</legend>
+        <label class="form__field" id="secondTop">
+          E-mail:
+          <input type="email"
+          name="email"
+          placeholder="email@example.com"
+          required
+          >
+        </label>
+
+        <label class="form__field">
+          Password:
+          <input type="password"
+          name="password"
+          minlength="6"
+          maxlength="32"
+          required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__fildset">
+        <legend>An interesting fact about you!</legend>
+        <label class="form__radiobutton">
+          Do you love cats?
+          <input type="radio"
+          name="cat"
+          value="yes"
+          >
+          Yes
+        </label>
+
+        <label class="form__radiobutton">
+          <input type="radio"
+          name="cat"
+          value="no"
+          >
+          No
+        </label>
+
+        <label class="form__field">
+          What is your favorite color?
+          <input type="color"
+          name="color"
+          >
+        </label>
+
+        <label class="form__field">
+          What time do you go to bed?
+          <input type="time"
+          name="time"
+          >
+        </label>
+
+        <label class="form__field">
+          What are your favorite brand of cars?
+
+          <select name="carBrand" multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+
+        <label class="form__field">
+          How do you rate our work?
+          <input type="range"
+          name="rate"
+          min="0"
+          max="100"
+          step="1"
+          value="0"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="form__fildset">
+        <legend>Additional info</legend>
+        <label class="form__field" id="fourthTop">
+          Comments:
+          <textarea name="feedback" autocomplete="off"></textarea>
+        </label>
+
+        <label class="form__field">
+          Would you recommend us?
+          <select name="recommendation">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+
+      <button type="submit" id="submitButton">Submit</button>
+
+    </form>
+
   </body>
 </html>
