--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,16 @@
   <body>
     <!-- <h1>HTML Form</h1> -->
     <script type="text/javascript" src="./main.js"></script>
+
     <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
 
-      <fieldset class="form__fildset" id="firstTopSet">
+      <fieldset class="form__fildset top">
         <legend>Personal information</legend>
-        <label class="form__field" id="firstTop">
+
+        <label class="form__field top">
           Surname:
-          <input type="text"
+          <input
+          type="text"
           name="surname"
           autocomplete="off"
           >
@@ -27,7 +30,8 @@
 
         <label class="form__field">
           Name:
-          <input type="text"
+          <input
+          type="text"
           name="Name"
           autocomplete="off"
           >
@@ -35,7 +39,8 @@
 
         <label class="form__field">
           How old are You?
-          <input type="number"
+          <input
+          type="number"
           name="age"
           min="1"
           max="100"
@@ -45,7 +50,8 @@
 
         <label class="form__field">
           Full date of birth:
-          <input type="date"
+          <input
+          type="date"
           name="birthdate"
           required
           >
@@ -53,17 +59,17 @@
 
         <label class="form__field">
           I accept the term of the agreement
-          <input type="checkbox"
-          name="terms"
-          >
+          <input type="checkbox"name="terms">
         </label>
       </fieldset>
 
       <fieldset class="form__fildset">
         <legend>Registration</legend>
-        <label class="form__field" id="secondTop">
+
+        <label class="form__field top">
           E-mail:
-          <input type="email"
+          <input
+          type="email"
           name="email"
           placeholder="email@example.com"
           required
@@ -72,7 +78,8 @@
 
         <label class="form__field">
           Password:
-          <input type="password"
+          <input
+          type="password"
           name="password"
           minlength="6"
           maxlength="32"
@@ -83,9 +90,11 @@
 
       <fieldset class="form__fildset">
         <legend>An interesting fact about you!</legend>
+
         <label class="form__radiobutton">
           Do you love cats?
-          <input type="radio"
+          <input
+          type="radio"
           name="cat"
           value="yes"
           >
@@ -93,7 +102,8 @@
         </label>
 
         <label class="form__radiobutton">
-          <input type="radio"
+          <input
+          type="radio"
           name="cat"
           value="no"
           >
@@ -102,16 +112,12 @@
 
         <label class="form__field">
           What is your favorite color?
-          <input type="color"
-          name="color"
-          >
+          <input type="color" name="color">
         </label>
 
         <label class="form__field">
           What time do you go to bed?
-          <input type="time"
-          name="time"
-          >
+          <input type="time" name="time">
         </label>
 
         <label class="form__field">
@@ -126,7 +132,8 @@
 
         <label class="form__field">
           How do you rate our work?
-          <input type="range"
+          <input
+          type="range"
           name="rate"
           min="0"
           max="100"
@@ -138,7 +145,8 @@
 
       <fieldset class="form__fildset">
         <legend>Additional info</legend>
-        <label class="form__field" id="fourthTop">
+
+        <label class="form__field top">
           Comments:
           <textarea name="feedback" autocomplete="off"></textarea>
         </label>
@@ -152,9 +160,10 @@
         </label>
       </fieldset>
 
-      <button type="submit" id="submitButton">Submit</button>
+      <button type="submit" class="submitButton">Submit</button>
 
     </form>
 
   </body>
+
 </html>
