--- a/src/index.html
+++ b/src/index.html
@@ -22,44 +22,44 @@
         <label class="form__field top">
           Surname:
           <input
-          type="text"
-          name="surname"
-          autocomplete="off"
+            type="text"
+            name="surname"
+            autocomplete="off"
           >
         </label>
 
         <label class="form__field">
           Name:
           <input
-          type="text"
-          name="Name"
-          autocomplete="off"
+            type="text"
+            name="name"
+            autocomplete="off"
           >
         </label>
 
         <label class="form__field">
           How old are You?
           <input
-          type="number"
-          name="age"
-          min="1"
-          max="100"
-          value="12"
+            type="number"
+            name="age"
+            min="1"
+            max="100"
+            value="12"
           >
         </label>
 
         <label class="form__field">
           Full date of birth:
           <input
-          type="date"
-          name="birthdate"
-          required
+            type="date"
+            name="birthDate"
+            required
           >
         </label>
 
         <label class="form__field">
           I accept the term of the agreement
-          <input type="checkbox"name="terms">
+          <input type="checkbox" name="terms">
         </label>
       </fieldset>
 
@@ -69,21 +69,21 @@
         <label class="form__field top">
           E-mail:
           <input
-          type="email"
-          name="email"
-          placeholder="email@example.com"
-          required
+            type="email"
+            name="email"
+            placeholder="email@example.com"
+            required
           >
         </label>
 
         <label class="form__field">
           Password:
           <input
-          type="password"
-          name="password"
-          minlength="6"
-          maxlength="32"
-          required
+            type="password"
+            name="password"
+            minlength="6"
+            maxlength="32"
+            required
           >
         </label>
       </fieldset>
@@ -94,18 +94,18 @@
         <label class="form__radiobutton">
           Do you love cats?
           <input
-          type="radio"
-          name="cat"
-          value="yes"
+            type="radio"
+            name="cat"
+            value="yes"
           >
           Yes
         </label>
 
         <label class="form__radiobutton">
           <input
-          type="radio"
-          name="cat"
-          value="no"
+            type="radio"
+            name="cat"
+            value="no"
           >
           No
         </label>
@@ -133,12 +133,12 @@
         <label class="form__field">
           How do you rate our work?
           <input
-          type="range"
-          name="rate"
-          min="0"
-          max="100"
-          step="1"
-          value="0"
+            type="range"
+            name="workRate"
+            min="0"
+            max="100"
+            step="1"
+            value="0"
           >
         </label>
       </fieldset>
@@ -148,7 +148,7 @@
 
         <label class="form__field top">
           Comments:
-          <textarea name="feedback" autocomplete="off"></textarea>
+          <textarea name="feedBack" autocomplete="off"></textarea>
         </label>
 
         <label class="form__field">
